fix: resolve code review findings, performance issues, and validation errors